# Markov-Chain-to-Model-Weather

./: .gitignore
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CitySelector.tsx  DataFetcher.tsx  SimulationControl.tsx  StateTransitionDiagram.tsx  StatisticsPanel.tsx  TransitionMatrixView.tsx  WASMErrorBoundary.tsx  WeatherTimeline.tsx
frontend/src/hooks/: useMarkovChain.ts  useWeatherAPI.ts
rust-core/: Cargo.toml  build.ps1  test.html
rust-core/src/: lib.rs
